--- a/login.html
+++ b/login.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.2/bootstrap3-typeahead.min.js">
+    </script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
-<body>
-    <p>test</p>
-</body>
+    <body style="text-align: center">
+        <div>
+            <nav>
+                <a href="#"><img src="./assets/images/flavour-fusion-icon.png" id="icon"></a>
+                <ul id="nav-bar">
+                    <li class="nav-list"><a href="/">Login</a></li>
+                    <li class="nav-list"><a href="/">Submit</a></li>
+                    <li class="nav-list"><a href="/">Contact</a></li>
+                </ul>
+            </nav>
+        <div>
+    </body>
 </html>
