--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     </script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Log in</title>
 </head>
     <body style="text-align: center">
         <div>
