--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
         <div>
     </header>
     <section class="login-box">
-        <h1>Log in</h1>
+        <h1 id="login-title">Log in</h1>
         <form action="/login" method="post">
             <input type="text" name="username" id="username-field" placeholder="Username">
             <input type="password" name="password" id= "password-field" placeholder="Password">
