--- a/recipe.html
+++ b/recipe.html
@@ -29,14 +29,20 @@
                 custard on the inside we spent weeks eating tons of butter, bread, and syrup to 
                 discover the best classic french toast recipe. The end result is indulgent, delicious, 
                 and most importantly, easy to make. What’s not to love?</p> <!--description-->
-            <div class="vid-bg"> 
-                <iframe src="https://s3.amazonaws.com/video-api-prod/assets/42109c902ae449bda59cebafa04745ca/BFV81893_FrenchToast_ADB_090821_Final_16x9_YT.mp4"></iframe>
-            </div>
         </div>
         <div class="side"> 
             <div class="history">
                 <h2 class="history-title">Jump back into:</h2>
                 <div id="history-card"></div>
+                <div id="history-card"></div>
+                <div id="history-card"></div>
+                <div id="history-card"></div>
+            </div>
+        </div>
+        <div class="instructions">
+            <h1>Instructions:</h1>    
+            <div class="vid-bg"> 
+                <iframe src="https://s3.amazonaws.com/video-api-prod/assets/42109c902ae449bda59cebafa04745ca/BFV81893_FrenchToast_ADB_090821_Final_16x9_YT.mp4"></iframe>
             </div>
         </div>
     </main>
