Used Bootstrap to center align text

--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header style="text-align: center">
+    <header class="header">
         <div>
             <nav>
                 <a href="#"><img src="./assets/images/flavour-fusion-icon.png" id="icon"></a>
@@ -25,7 +25,7 @@
             </nav>
         <div>
     </header>
-    <section class="login-box">
+    <section class="login-box text-center">
         <h1 id="login-title">Log in</h1>
         <form action="/login" method="post">
             <input type="text" name="username" id="username-field" placeholder="Username">
