--- a/login.html
+++ b/login.html
@@ -28,7 +28,8 @@
     <section class="login-box text-center">
         <div class="form-container">
             <h1 id="login-title">Log in</h1>
-            <form action="/login" method="post">
+            <h2 id="login-h2">to access your favourite recipes!</h2>
+            <form action="/login" method="post" class="form">
                 <input type="text" name="username" id="username-field" placeholder="Username">
                 <input type="password" name="password" id="password-field" placeholder="Password">
                 <input type="submit" id="submit-button" value="Login">
