Added log in button

--- a/login.html
+++ b/login.html
@@ -26,6 +26,12 @@
         <div>
     </header>
 
+    <section>
+        <button type="button" class="login-button">
+            Log in
+        </button>
+    </section>
+
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
