Fixed layout of page

--- a/recipe.html
+++ b/recipe.html
@@ -17,34 +17,35 @@
         </div>
     </header>
     <main>
-        <div class="ingredients">
-            <h1>French Toast</h1> <!-- sections.name /-->
-            <div class="time-block">
-                <h2 id="time">Prep Time: 5 minutes</h2> <!--sections.prep_time_minutes-->
-                <h2 id="time">Cook Time: 10 minutes</h2> <!--cook_time_minutes-->
+        <div class="top">
+            <div class="side"> 
+                <div class="history">
+                    <h2 class="history-title">Jump back into:</h2>
+                    <div id="history-card"></div>
+                    <div id="history-card"></div>
+                    <div id="history-card"></div>
+                </div>
             </div>
-            <img src="https://img.buzzfeed.com/thumbnailer-prod-us-east-1/video-api/assets/341495.jpg" alt=""> <!-- thumbnail_url -->
-            <p>This iconic dish is all about the details. While french toast might seem simple, 
-                looks can be deceiving. To get that perfectly crispy exterior and creamy, silky 
-                custard on the inside we spent weeks eating tons of butter, bread, and syrup to 
-                discover the best classic french toast recipe. The end result is indulgent, delicious, 
-                and most importantly, easy to make. What’s not to love?</p> <!--description-->
+            <div class="ingredients">
+                <h1>French Toast</h1> <!-- sections.name /-->
+                <div class="time-block">
+                    <h2 id="time">Prep Time: 5 minutes</h2> <!--sections.prep_time_minutes-->
+                    <h2 id="time">Cook Time: 10 minutes</h2> <!--cook_time_minutes-->
+                </div>
+                <img src="https://img.buzzfeed.com/thumbnailer-prod-us-east-1/video-api/assets/341495.jpg" alt=""> <!-- thumbnail_url -->
+                <p>This iconic dish is all about the details. While french toast might seem simple, 
+                    looks can be deceiving. To get that perfectly crispy exterior and creamy, silky 
+                    custard on the inside we spent weeks eating tons of butter, bread, and syrup to 
+                    discover the best classic french toast recipe. The end result is indulgent, delicious, 
+                    and most importantly, easy to make. What’s not to love?</p> <!--description-->
+            </div>
         </div>
-        <div class="side"> 
-            <div class="history">
-                <h2 class="history-title">Jump back into:</h2>
-                <div id="history-card"></div>
-                <div id="history-card"></div>
-                <div id="history-card"></div>
-                <div id="history-card"></div>
-            </div>
-        </div>
-        <div class="instructions">
-            <h1>Instructions:</h1>    
-            <div class="vid-bg"> 
-                <iframe src="https://s3.amazonaws.com/video-api-prod/assets/42109c902ae449bda59cebafa04745ca/BFV81893_FrenchToast_ADB_090821_Final_16x9_YT.mp4"></iframe>
-            </div>
+        <div class="bottom">   
+            <h1 id="instructions">Instructions:</h1> 
+            <p>
+            <iframe src="https://s3.amazonaws.com/video-api-prod/assets/42109c902ae449bda59cebafa04745ca/BFV81893_FrenchToast_ADB_090821_Final_16x9_YT.mp4"></iframe>
         </div>
     </main>
+    <script src="./recipe-script.js"></script>
 </body>
 </html>
