Added data-toggle and data-target to button, created div

--- a/login.html
+++ b/login.html
@@ -27,9 +27,11 @@
     </header>
 
     <section>
-        <button type="button" class="login-button">
+        <button type="button" class="login-button" data-toggle="login-section" data-target="login">
             Log in
         </button>
+        <div id="login" class="login-section" role="dialog">
+        </div>
     </section>
 
     <script src="./assets/js/script.js"></script>
