Added comments to js file

--- a/index.html
+++ b/index.html
@@ -27,16 +27,17 @@
 <p class="web-subtitle">Share your own recipe with us!</p>
 <form id="recipe-form">
 
-    <label title="recipe-name">Recipe Name:</label>
+    <label for="recipe-name">Recipe Name:</label>
     <input type="text" id="recipe-name" name="recipe-name">
   
-    <label title="recipe-ingredients">Ingredients:</label>
+    <label for="recipe-ingredients">Ingredients:</label>
     <textarea id="recipe-ingredients" name="recipe-ingredients"></textarea>
   
-    <label title="recipe-instructions">Instructions:</label>
+    <label for="recipe-instructions">Instructions:</label>
     <textarea id="recipe-instructions" name="recipe-instructions"></textarea>
   
     <button type="submit">Submit Recipe</button>
+    <div></div>
   
   </form>
   
