--- a/login.html
+++ b/login.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.2/bootstrap3-typeahead.min.js">
-    </script>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<link href= 
+    "https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"> 
+    <script src= 
+    "https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"></script> 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Log in</title>
 </head>
@@ -27,7 +27,7 @@
     </header>
 
     <section>
-        <button type="button" class="login-button" data-toggle="login-section" data-target="login">
+        <button type="button" class="btn btn-success" data-toggle="login-section" data-target="#login">
             Log in
         </button>
         <div id="login" class="login-section" role="dialog">
