--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 <form id="recipe-form">
 
     <label for="recipe-name">Recipe Name:</label>
-    <input type="text" id="recipe-name" name="recipe-name">
+    <input type="text" id="recipe-name" name="recipe-name" required>
   
     <label for="recipe-ingredients">Ingredients:</label>
-    <textarea id="recipe-ingredients" name="recipe-ingredients"></textarea>
+    <textarea id="recipe-ingredients" name="recipe-ingredients" required></textarea>
   
     <label for="recipe-instructions">Instructions:</label>
-    <textarea id="recipe-instructions" name="recipe-instructions"></textarea>
+    <textarea id="recipe-instructions" name="recipe-instructions" required></textarea>
   
     <button type="submit">Submit Recipe</button>
     <div></div>
