--- a/recipe.html
+++ b/recipe.html
@@ -18,34 +18,35 @@
     </header>
     <main>
         <div class="top">
-            <div class="side"> 
-                <div class="history">
-                    <h2 class="history-title">Jump back into:</h2>
-                    <div id="history-card"></div>
-                    <div id="history-card"></div>
-                    <div id="history-card"></div>
+            <h1 id="food-name"></h1>
+            <div class="ingredients"> 
+                <div class="ingredients-list">
+                    <h2 class="ingredient-title">Ingredients Used:</h2>
+                    <ul id="ing-list"></ul>
                 </div>
             </div>
-            <div class="ingredients">
-                <h1>French Toast</h1> <!-- sections.name /-->
-                <div class="time-block">
-                    <h2 id="time">Prep Time: 5 minutes</h2> <!--sections.prep_time_minutes-->
-                    <h2 id="time">Cook Time: 10 minutes</h2> <!--cook_time_minutes-->
-                </div>
-                <img src="https://img.buzzfeed.com/thumbnailer-prod-us-east-1/video-api/assets/341495.jpg" alt=""> <!-- thumbnail_url -->
-                <p>This iconic dish is all about the details. While french toast might seem simple, 
+            <div class="introduction">
+                <!-- <p id="ingredients"><strong>Ingredients: </strong></p> -->
+                <!-- <div class="time-block">
+                    <h2 id="time">Prep Time: 5 minutes</h2>
+                    <h2 id="time">Cook Time: 10 minutes</h2>
+                </div> -->
+                <img id="food-picture" src="" alt="">
+                <h1 id="instructions">Instructions:</h1>
+                <ol id="steps"></ol>
+                <!-- <p>This iconic dish is all about the details. While french toast might seem simple, 
                     looks can be deceiving. To get that perfectly crispy exterior and creamy, silky 
                     custard on the inside we spent weeks eating tons of butter, bread, and syrup to 
                     discover the best classic french toast recipe. The end result is indulgent, delicious, 
-                    and most importantly, easy to make. What’s not to love?</p> <!--description-->
+                    and most importantly, easy to make. What’s not to love?</p> -->
             </div>
         </div>
-        <div class="bottom">   
-            <h1 id="instructions">Instructions:</h1> 
-            <p>
-            <iframe src="https://s3.amazonaws.com/video-api-prod/assets/42109c902ae449bda59cebafa04745ca/BFV81893_FrenchToast_ADB_090821_Final_16x9_YT.mp4"></iframe>
-        </div>
+        <!-- <div class="bottom">    -->
+            <!-- <h1 id="instructions">Instructions:</h1> -->
+            <!-- <iframe src="https://s3.amazonaws.com/video-api-prod/assets/42109c902ae449bda59cebafa04745ca/BFV81893_FrenchToast_ADB_090821_Final_16x9_YT.mp4"></iframe> -->
+        <!-- </div> -->
     </main>
     <script src="./recipe-script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </body>
 </html>
