--- a/recipe.html
+++ b/recipe.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="flavour-fusion.png" alt="A circular logo of a fork, spoon, and knife, on a board">
+        <img class="logo" src="flavour-fusion.png" alt="A logo with a fork, apple, and knife">
         <div class="nav-bar">
             <a>Home</a>
             <a>Log in</a>
@@ -17,34 +17,22 @@
         </div>
     </header>
     <main>
-        <div class="top">
-            <h1 id="food-name"></h1>
-            <div class="ingredients"> 
-                <div class="ingredients-list">
-                    <h2 class="ingredient-title">Ingredients Used:</h2>
-                    <ul id="ing-list"></ul>
-                </div>
+        <h1 id="food-name"></h1>
+        <div class="ingredients"> 
+            <div class="ingredients-list">
+                <h2 class="ingredient-title">Ingredients Used:</h2>
+                <ul id="ing-list"></ul>
             </div>
-            <div class="introduction">
-                <!-- <p id="ingredients"><strong>Ingredients: </strong></p> -->
-                <!-- <div class="time-block">
-                    <h2 id="time">Prep Time: 5 minutes</h2>
-                    <h2 id="time">Cook Time: 10 minutes</h2>
-                </div> -->
-                <img id="food-picture" src="" alt="">
-                <h1 id="instructions">Instructions:</h1>
-                <ol id="steps"></ol>
-                <!-- <p>This iconic dish is all about the details. While french toast might seem simple, 
-                    looks can be deceiving. To get that perfectly crispy exterior and creamy, silky 
-                    custard on the inside we spent weeks eating tons of butter, bread, and syrup to 
-                    discover the best classic french toast recipe. The end result is indulgent, delicious, 
-                    and most importantly, easy to make. What’s not to love?</p> -->
+            <h3 class="search">Previously Searched:</h3>
+            <div class="history">
+                <h3 class="history-card">Spaghetti and Meatball Sub</h3>
             </div>
         </div>
-        <!-- <div class="bottom">    -->
-            <!-- <h1 id="instructions">Instructions:</h1> -->
-            <!-- <iframe src="https://s3.amazonaws.com/video-api-prod/assets/42109c902ae449bda59cebafa04745ca/BFV81893_FrenchToast_ADB_090821_Final_16x9_YT.mp4"></iframe> -->
-        <!-- </div> -->
+        <div class="introduction">
+            <img id="food-picture" src="" alt="">
+            <h1 id="instructions">Instructions:</h1>
+            <ol id="steps"></ol>
+        </div>
     </main>
     <script src="./recipe-script.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
