--- a/recipe.html
+++ b/recipe.html
@@ -24,9 +24,9 @@
                 <ul id="ing-list"></ul>
             </div>
             <h3 class="search">Previously Searched:</h3>
-            <div class="history">
-                <h3 class="history-card">Spaghetti and Meatball Sub</h3>
-            </div>
+            <ul class="history">
+                <li class="history-card"><img src="https://20fix.com/xfood/img/chicken-soup-with-caramelized-ginger.jpg">Spaghetti and Meatball Sub</li>
+            </ul>
         </div>
         <div class="introduction">
             <img id="food-picture" src="" alt="">
