Renamed html file

--- a/submit.html
+++ b/submit.html
@@ -28,13 +28,13 @@
 <form id="recipe-form">
 
     <label for="recipe-name">Recipe Name:</label>
-    <input type="text" id="recipe-name" name="recipe-name" required>
+    <input type="text" id="recipe-name" name="recipe-name" placeholder="Name of the recipe" required>
   
     <label for="recipe-ingredients">Ingredients:</label>
-    <textarea id="recipe-ingredients" name="recipe-ingredients" required></textarea>
+    <textarea id="recipe-ingredients" name="recipe-ingredients" placeholder="Ingredients" required></textarea>
   
     <label for="recipe-instructions">Instructions:</label>
-    <textarea id="recipe-instructions" name="recipe-instructions" required></textarea>
+    <textarea id="recipe-instructions" name="recipe-instructions" placeholder="Steps of how to prepare"></textarea>
   
     <button type="submit">Submit Recipe</button>
     <div></div>
