--- a/recipe.html
+++ b/recipe.html
@@ -17,7 +17,6 @@
         </div>
     </header>
     <main>
-        <h1 id="food-name"></h1>
         <div class="ingredients"> 
             <div class="ingredients-list">
                 <h2 class="ingredient-title">Ingredients Used:</h2>
@@ -26,9 +25,11 @@
             <h3 class="search">Previously Searched:</h3>
             <ul class="history">
                 <li class="history-card"><img src="https://20fix.com/xfood/img/chicken-soup-with-caramelized-ginger.jpg">Spaghetti and Meatball Sub</li>
+                <li class="history-card"><img src="https://20fix.com/xfood/img/chicken-soup-with-caramelized-ginger.jpg">Spaghetti and Meatball Sub</li>
             </ul>
         </div>
         <div class="introduction">
+            <h1 id="food-name"></h1>
             <img id="food-picture" src="" alt="">
             <h1 id="instructions">Instructions:</h1>
             <ol id="steps"></ol>
