Change web-title text

--- a/submit.html
+++ b/submit.html
@@ -23,7 +23,7 @@
                 </ul>
             </nav>
             <div>
-<h1 class="web-title">SHARE YOUR RECIPE</h1>
+<h1 class="web-title">SUBMIT YOUR RECIPE</h1>
 <p class="web-subtitle">Share your own recipe with us!</p>
 <form id="recipe-form">
 
