Added a fixed header

--- a/recipe.html
+++ b/recipe.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe</title>
-    <link rel="stylesheet" href="recipe-style.css">
+    <link rel="stylesheet" href="assets/css/recipe-style.css">
 </head>
 <body>
     <header>
-        <img class="logo" src="flavour-fusion.png" alt="A logo with a fork, apple, and knife">
+        <img class="logo" src="./assets/flavour-fusion.png" alt="A logo with a fork, apple, and knife">
         <div class="nav-bar">
             <a>Home</a>
             <a>Log in</a>
@@ -35,7 +35,8 @@
             <ol id="steps"></ol>
         </div>
     </main>
-    <script src="./recipe-script.js"></script>
+    <script src="./assets/js/recipe-script.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </body>
+
 </html>
