--- a/login.html
+++ b/login.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<link href= 
-    "https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"> 
-    <script src= 
-    "https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"></script> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Log in</title>
 </head>
@@ -23,17 +21,17 @@
                     <li class="nav-list"><a href="/">Contact</a></li>
                 </ul>
             </nav>
-        <div>
+        </div>
     </header>
 
-    <section>
-        <button type="button" class="btn btn-success" data-toggle="login-section" data-target="#login">
+    <section class="container">
+        <button type="button" class="btn btn-success btn-lg" data-toggle="login-section" data-target="#login">
             Log in
         </button>
         <div id="login" class="login-section" role="dialog">
-        </div>
     </section>
 
     <script src="./assets/js/script.js"></script>
+
 </body>
 </html>
