Added all model divs

--- a/login.html
+++ b/login.html
@@ -29,6 +29,21 @@
             Log in
         </button>
         <div id="login" class="login-section" role="dialog">
+            <div class="model-dialog">
+                <div class="model-content">
+                    <div class="model-header">
+                        <div class="model-title">
+                            <h2>Log in</h2>
+                        </div>
+                    </div>
+                    <div class="model-body">
+                        login form here
+                    </div>
+                    <div class="model-footer">
+                        close button here
+                    </div>
+                </div>
+            </div>
     </section>
 
     <script src="./assets/js/script.js"></script>
