Added close button

--- a/login.html
+++ b/login.html
@@ -40,7 +40,9 @@
                         login form here
                     </div>
                     <div class="model-footer">
-                        close button here
+                        <button type="button" class="btn btn-dark btn-lg" data-dismiss="login-section">
+                            Close
+                        </button>
                     </div>
                 </div>
             </div>
