Spelled modal wrong, corrected all divs

--- a/login.html
+++ b/login.html
@@ -29,17 +29,17 @@
             Log in
         </button>
         <div id="login" class="login-section" role="dialog">
-            <div class="model-dialog">
-                <div class="model-content">
-                    <div class="model-header">
-                        <div class="model-title">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <div class="modal-title">
                             <h2>Log in</h2>
                         </div>
                     </div>
-                    <div class="model-body">
+                    <div class="modal-body">
                         login form here
                     </div>
-                    <div class="model-footer">
+                    <div class="modal-footer">
                         <button type="button" class="btn btn-dark btn-lg" data-dismiss="login-section">
                             Close
                         </button>
