--- a/login.html
+++ b/login.html
@@ -37,7 +37,9 @@
                         </div>
                     </div>
                     <div class="modal-body">
-                        login form here
+                        <form class="login-form">
+
+                        </form>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-dark btn-lg" data-dismiss="login-section">
