Added labels for username and password fields

--- a/login.html
+++ b/login.html
@@ -38,7 +38,8 @@
                     </div>
                     <div class="modal-body">
                         <form class="login-form">
-
+                            <label for="username">Username:</label>
+                            <label for="password">Password:</label>
                         </form>
                     </div>
                     <div class="modal-footer">
