Added input fields

--- a/login.html
+++ b/login.html
@@ -39,7 +39,9 @@
                     <div class="modal-body">
                         <form class="login-form">
                             <label for="username">Username:</label>
+                            <input type="text" id="username" required>
                             <label for="password">Password:</label>
+                            <input type="text" id="password" required>
                         </form>
                     </div>
                     <div class="modal-footer">
