Added onclick function to button

--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
     </header>
 
     <section class="container">
-        <button type="button" class="btn btn-success btn-lg" data-toggle="login-section" data-target="#login">
+        <button type="button" class="btn btn-success btn-lg" onclick="login()">
             Log in
         </button>
         <div id="login" class="login-section" role="dialog">
