--- a/submit.html
+++ b/submit.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.2/bootstrap3-typeahead.min.js">
     </script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
-    <title>Recipe-Generator</title>
+    <title>Submit Your Recipe!</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body style="text-align: center">
@@ -36,6 +36,9 @@
     <label for="recipe-instructions">Instructions:</label>
     <textarea id="recipe-instructions" name="recipe-instructions" placeholder="Steps of how to prepare"></textarea>
   
+    <label for="recipe-image">Recipe Image:</label>
+    <input type="file" id="recipe-image" name="recipe-image">
+
     <button type="submit">Submit Recipe</button>
     <div></div>
   
