--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.2/bootstrap3-typeahead.min.js">
     </script>
-
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
     <link href="./assets/style.css" rel="stylesheet" />
 </head>
 
@@ -22,7 +22,7 @@
                 <ul id="nav-bar">
                         <li class="nav-list"><a href="/">Login</a></li>
                         <li class="nav-list"><a href="/">Submit</a></li>
-                        <li class="nav-list"><a href="/">Contact</a></li>
+                        <li class="nav-list"><a href="#contact-info">Contact</a></li>
                 </ul>
             </nav>
             <div>
@@ -41,7 +41,36 @@
         </div>
     </div>
 
+    <p class="d-inline-flex gap-1">
+        <a id="instructionButton" class="btn btn-dark" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+          Toggle Instructions
+        </a>
+      </p>
+      <div class="collapse instructionDisplay" id="collapseExample">
+        <div class="card card-body">
+            <div class="instructionDisplayHeader">
+                <h3>Welcome to our recipe website! Follow these steps to get started:</h3>
+                </div>
+                    <li>Enter the desired dish in the search bar.</li>
+                    <li>Click the "Search" button.</li>
+                    <li>Click on a dish to see the recipe.</li>
+        </div>
+      </div>
+
+    <div class="contact">
+        <div class="contact-header">
+            <h1>Contact Us</h1>
+        </div>
+        <div id="contact-info">
+            <p>Email: group5@mail.com</p>
+            <p>Contact Number: xxx-xxx-xxxx</p>
+        </div>
+    </div>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="./assets/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.slim.min.js"></script>
+
 </body>
 
 </html>
