Renamed class to 'modal' as per Bootstrap naming conventions

--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
         <button type="button" class="btn btn-success btn-lg" onclick="login()">
             Log in
         </button>
-        <div id="login" class="login-section" role="dialog">
+        <div id="login" class="modal" role="dialog">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -45,7 +45,7 @@
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-dark btn-lg" data-dismiss="login-section">
+                        <button type="button" class="btn btn-dark btn-lg" data-dismiss="modal">
                             Close
                         </button>
                     </div>
