--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Log in</title>
 </head>
@@ -42,6 +43,8 @@
                             <input type="text" id="username" required>
                             <label for="password">Password:</label>
                             <input type="text" id="password" required>
+                            
+                            <button type="button" class="btn btn-success" onclick="login()">Login</button>
                         </form>
                     </div>
                     <div class="modal-footer">
