Added a 'Remember User' function

--- a/login.html
+++ b/login.html
@@ -43,7 +43,10 @@
                             <input type="text" id="username" required>
                             <label for="password">Password:</label>
                             <input type="text" id="password" required>
-                            
+                            <div class="form-check">
+                                <label for="rememberUser">Remember Me:</label>
+                                <input type="checkbox" id="rememberUser">
+                            </div>
                             <button type="button" class="btn btn-success" onclick="login()">Login</button>
                         </form>
                     </div>
