--- a/login.html
+++ b/login.html
@@ -33,9 +33,9 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <div class="modal-title">
-                            <h2>Log in</h2>
-                        </div>
+                        <h2 class="modal-title">
+                            Log in
+                        </h2>
                     </div>
                     <div class="modal-body">
                         <form class="login-form">
