Fixed button and div naming

--- a/login.html
+++ b/login.html
@@ -26,10 +26,11 @@
     </header>
 
     <section class="container">
-        <button type="button" class="btn btn-success btn-lg" onclick="login()">
+        <button class="btn btn-success btn-lg" onclick="loginBox()">
             Log in
         </button>
-        <div id="login" class="modal" role="dialog">
+
+        <div id="login" class="modal">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
