Added a Sign Up button

--- a/login.html
+++ b/login.html
@@ -29,6 +29,9 @@
         <button class="btn btn-success btn-lg" onclick="loginBox()">
             Log in
         </button>
+        <button class="btn btn-dark btn-lg" onclick="signupBox()">
+            Sign Up
+        </button>
 
         <div id="login" class="modal">
             <div class="modal-dialog">
