--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-dark btn-lg" data-dismiss="modal">
+                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">
                             Exit
                         </button>
                     </div>
@@ -81,7 +81,7 @@
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-dark btn-lg" data-dismiss="modal">
+                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">
                             Exit
                         </button>
                     </div>
