--- a/recipe.html
+++ b/recipe.html
@@ -36,6 +36,7 @@
         </div>
     </main>
     <script src="./assets/js/recipe-script.js"></script>
+    <script src="./assets/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </body>
 
